syntax="proto3";
package cache;

service Cache  {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Set (SetRequest) returns (SetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Clear (ClearRequest) returns (ClearResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
  uint64 ttl_milliseconds = 3; // default 1 minute
}

message SetResponse {
  bool saved = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool removed = 1;
}

message UpdateRequest {
  string key = 1;
  string value = 2;
  uint64 ttl_milliseconds = 3; // default 1 minute
}

message UpdateResponse {
  bool updated = 1;
}

message ClearRequest {}

message ClearResponse {
  bool cleared = 1;
}